[package]
name = "ronin-sol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.19"
solana-program = "1.9.18"
solana-client = "1.10.19"
spl-token = "3.3.0"
spl-associated-token-account = "1.0.3"
solana-transaction-status = "1.10.20"
bs58 = "0"
borsh = "0.9.3"
base64 = "0"
arrayref = "0"
lazy_static = "1"
hex = "0"
serde = "1"
serde_json = "1"
chrono = "0"
tokio-tungstenite = "0.17.1"
ed25519-dalek = "1.0.1"
error-chain = "0.12.4"
tokio = "1.5.0"
futures-util = "0.3.14"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.0"
bincode = "1.3.3"
webpki-roots = "0.22.3"
url = "2.2.2"
thiserror = "1.0.31"
crossbeam-channel = "0.5.4"
futures = "0.3.21"